# statistica-big-data

./: .gitignore  README.md  pyproject.toml  requirements.txt
lezione_01/: 01_introduzione_stringhe_interi_decimali.ipynb
lezione_02/: 02-oggetti_e_metodi.ipynb
lezione_03/: 03-condizionali_e_operatori.ipynb
lezione_04/: 04-loop_e_sequenze.ipynb
lezione_05/: 05-liste_e_tuple.ipynb
lezione_06/: 06-dizionari.ipynb
lezione_07/: 07-introduzione_numpy.ipynb
lezione_08/: 08-pandas.ipynb  solo_versicolor.csv
lezione_09/: 09-plotting.ipynb
lezione_10_11/: esercizio-manipolazione_dati.ipynb
lezione_10_11/data/: 2022_05_24-17_23_33-checkpoint-labels_annotations.csv  2022_05_24-17_53_48-checkpoint-labels_annotations.csv  2022_05_24-17_54_49-checkpoint-labels_annotations.csv  2022_05_24-19_37_44-checkpoint-labels_annotations.csv  2022_05_24-20_09_25-checkpoint-labels_annotations.csv  2022_05_31-17_36_01-checkpoint-labels_annotations.csv  2022_05_31-20_32_30-checkpoint-labels_annotations.csv  2022_05_31-20_44_48-checkpoint-labels_annotations.csv  2022_05_31-22_39_35-checkpoint-labels_annotations.csv
lezione_12/: introduzione-kmeans.ipynb
lezione_13/: clustering-distance_metrics.ipynb
lezione_14_15/: recap_clustering.ipynb
