[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Luca Baggi", email = "luca.baggi at unimi.it"},
]
dependencies = [
    "numpy>=1.22.4",
    "pandas>=1.4.2",
    "matplotlib>=3.5.2",
    "seaborn>=0.11.2",
    "scikit-learn>=1.1.1"]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
